# PAM-Parallel-Fprint

./: CMakeLists.txt  README.md  add_to_pam  install.sh  uninstall.sh
src/: pam_parallel_fprint.c
